--- a/Coach Views/Request Header Section/request-header-section.css
+++ b/Coach Views/Request Header Section/request-header-section.css
@@ -2,6 +2,7 @@
     padding: 2em 2em 3em 2em;
     border: 1px solid silver;
     border-radius: 8px;
+    margin-bottom: 3em;
 }
 .Request_Header_Section.hidden{
     display: none;
